force-app/main/default/objects/RegraPreco__c/RegraPreco__c.object-meta.xml
<CustomObject>
    <label>Regra de Preço</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Regra de Preço</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regras de Preços</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>