force-app/main/default/objects/RegraPreco__c/fields/AceitaPagamentoRevoSeats__c.field-meta.xml
<CustomField>
    <fullName>AceitaPagamentoRevoSeats__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aceita Pagamento Revo Seats?</label>
    <type>Checkbox</type>
</CustomField>