force-app/main/default/objects/RegraPreco__c/fields/DataFinal__c.field-meta.xml
<CustomField>
    <fullName>DataFinal__c</fullName>
    <label>Data Final</label>
    <type>Date</type>
</CustomField>