force-app/main/default/objects/RegraPreco__c/fields/DataInicial__c.field-meta.xml
<CustomField>
    <fullName>DataInicial__c</fullName>
    <label>Data Inicial</label>
    <type>Date</type>
</CustomField>