force-app/main/default/objects/RegraPreco__c/fields/HorarioFinal__c.field-meta.xml
<CustomField>
    <fullName>HorarioFinal__c</fullName>
    <label>Horário Final</label>
    <type>Time</type>
</CustomField>