force-app/main/default/objects/RegraPreco__c/fields/HorarioInicial__c.field-meta.xml
<CustomField>
    <fullName>HorarioInicial__c</fullName>
    <label>Horário Inicial</label>
    <type>Time</type>
</CustomField>