force-app/main/default/objects/RegraPreco__c/fields/LocalDestino__c.field-meta.xml
<CustomField>
    <fullName>LocalDestino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Destino</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Regras de Preços (Local Destino)</relationshipLabel>
    <relationshipName>Regras_de_Precos</relationshipName>
    <type>Lookup</type>
</CustomField>