force-app/main/default/objects/RegraPreco__c/fields/LocalOrigem__c.field-meta.xml
<CustomField>
    <fullName>LocalOrigem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Origem</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Regras de Preços</relationshipLabel>
    <relationshipName>RegrasPrecos</relationshipName>
    <type>Lookup</type>
</CustomField>