force-app/main/default/objects/RegraPreco__c/fields/MinutosAntecedencia__c.field-meta.xml
<CustomField>
    <fullName>MinutosAntecedencia__c</fullName>
    <label>Minutos Antecedência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>