force-app/main/default/objects/RegraPreco__c/fields/ModeloAeronave__c.field-meta.xml
<CustomField>
    <fullName>ModeloAeronave__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo Aeronave</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Regras de Preços (Modelo Aeronave)</relationshipLabel>
    <relationshipName>RegrasPrecosModelos</relationshipName>
    <type>Lookup</type>
</CustomField>