force-app/main/default/objects/RegraPreco__c/fields/PrecoRevoSeats__c.field-meta.xml
<CustomField>
    <fullName>PrecoRevoSeats__c</fullName>
    <label>Preço Revo Seats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>