force-app/main/default/objects/RegraPreco__c/fields/PrecoUnitario__c.field-meta.xml
<CustomField>
    <fullName>PrecoUnitario__c</fullName>
    <label>Preço Unitário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>