force-app/main/default/objects/RegraPreco__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Regras de Preços</relationshipLabel>
    <relationshipName>RegrasPrecos</relationshipName>
    <type>Lookup</type>
</CustomField>