force-app/main/default/objects/RegraPreco__c/fields/TipoPrecificacao__c.field-meta.xml
<CustomField>
    <fullName>TipoPrecificacao__c</fullName>
    <label>Tipo da Precificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantidade</fullName>
            </value>
            <value>
                <fullName>Hora voada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>